--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^17.0.0",
     "@angular/ssr": "^17.0.8",
     "bootstrap": "^5.3.2",
+    "bootstrap-icons": "^1.11.3",
     "express": "^4.18.2",
     "jquery": "^3.7.1",
     "rxjs": "~7.8.0",
